--- a/vivira_health_ios.xcodeproj/xcshareddata/xcschemes/vivira_health_ios.xcscheme
+++ b/vivira_health_ios.xcodeproj/xcshareddata/xcschemes/vivira_health_ios.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0710"
+   LastUpgradeVersion = "0720"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "8196A3741C45623D0033898B"
-               BuildableName = "vivira.app"
-               BlueprintName = "vivira"
-               ReferencedContainer = "container:vivira.xcodeproj">
+               BlueprintIdentifier = "81B14CBD1C490F7B003B0072"
+               BuildableName = "vivira_health_ios.app"
+               BlueprintName = "vivira_health_ios"
+               ReferencedContainer = "container:vivira_health_ios.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -32,30 +32,30 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "8196A3881C45623D0033898B"
-               BuildableName = "viviraTests.xctest"
-               BlueprintName = "viviraTests"
-               ReferencedContainer = "container:vivira.xcodeproj">
+               BlueprintIdentifier = "81B14CD11C490F7B003B0072"
+               BuildableName = "vivira_health_iosTests.xctest"
+               BlueprintName = "vivira_health_iosTests"
+               ReferencedContainer = "container:vivira_health_ios.xcodeproj">
             </BuildableReference>
          </TestableReference>
          <TestableReference
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "8196A3931C45623D0033898B"
-               BuildableName = "viviraUITests.xctest"
-               BlueprintName = "viviraUITests"
-               ReferencedContainer = "container:vivira.xcodeproj">
+               BlueprintIdentifier = "81B14CDC1C490F7B003B0072"
+               BuildableName = "vivira_health_iosUITests.xctest"
+               BlueprintName = "vivira_health_iosUITests"
+               ReferencedContainer = "container:vivira_health_ios.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8196A3741C45623D0033898B"
-            BuildableName = "vivira.app"
-            BlueprintName = "vivira"
-            ReferencedContainer = "container:vivira.xcodeproj">
+            BlueprintIdentifier = "81B14CBD1C490F7B003B0072"
+            BuildableName = "vivira_health_ios.app"
+            BlueprintName = "vivira_health_ios"
+            ReferencedContainer = "container:vivira_health_ios.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -75,10 +75,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8196A3741C45623D0033898B"
-            BuildableName = "vivira.app"
-            BlueprintName = "vivira"
-            ReferencedContainer = "container:vivira.xcodeproj">
+            BlueprintIdentifier = "81B14CBD1C490F7B003B0072"
+            BuildableName = "vivira_health_ios.app"
+            BlueprintName = "vivira_health_ios"
+            ReferencedContainer = "container:vivira_health_ios.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -94,10 +94,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8196A3741C45623D0033898B"
-            BuildableName = "vivira.app"
-            BlueprintName = "vivira"
-            ReferencedContainer = "container:vivira.xcodeproj">
+            BlueprintIdentifier = "81B14CBD1C490F7B003B0072"
+            BuildableName = "vivira_health_ios.app"
+            BlueprintName = "vivira_health_ios"
+            ReferencedContainer = "container:vivira_health_ios.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
