--- a/circle.yml
+++ b/circle.yml
@@ -1,4 +1,13 @@
 test:
   override:
     - xctool
-      -destination 'platform=iOS Simulator,name=iPhone 6,OS=9.1'
+      -workspace 'vivira_health_ios.xcworkspace'
+      -scheme 'vivira_health_ios' 
+      build build-tests run-tests 
+      -reporter plain -reporter plain:$CIRCLE_ARTIFACTS/xctool.log 
+      -reporter junit:$CIRCLE_TEST_REPORTS/xcode/results.xml 
+      -sdk iphonesimulator 
+      -destination 'platform=iOS Simulator,name=iPhone 6,OS=9.0' 
+      CODE_SIGNING_REQUIRED=NO 
+      CODE_SIGN_IDENTITY= 
+      PROVISIONING_PROFILE=
