--- a/circle.yml
+++ b/circle.yml
@@ -3,14 +3,10 @@ machine:
     version: 7.2
 test:
   override:
-    - set -o pipefail &&
-      xcodebuild
-        CODE_SIGNING_REQUIRED=NO
-        CODE_SIGN_IDENTITY=
-        PROVISIONING_PROFILE=
-        -sdk iphonesimulator
-        -destination 'platform=iOS Simulator,OS=8.1,name=iPhone 6'
-        -scheme "Loot"
-        clean build test |
-      tee $CIRCLE_ARTIFACTS/xcode_raw.log |
-      xcpretty --color --report junit --output $CIRCLE_TEST_REPORTS/xcode/results.xml
+    - xcodebuild 
+      -sdk iphonesimulator 
+      -workspace vivira_health_ios.xcworkspace 
+      -scheme vivira_health_ios 
+      -configuration Debug 
+      RUN_APPLICATION_TESTS_WITH_IOS_SIM=YES ONLY_ACTIVE_ARCH=NO 
+      clean build test
