--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,8 @@
 machine:
   xcode:
     version: 7.2
+  environment:
+    GYM_CODE_SIGNING_IDENTITY: "xiPhone Distribution: WIRELESS TELECOM PROCESSAMENTO DE DADOS LTDA (6D84833G2A)"
 test:
   override:
     - xcodebuild
@@ -9,21 +11,23 @@ test:
       -scheme vivira_health_ios
       -destination 'platform=iOS Simulator,name=iPhone 6,OS=9.2'
       -configuration Debug
+      CODE_SIGNING_REQUIRED=NO                # no need to do code signing at this point
+      CODE_SIGN_IDENTITY=                     # as it will be done in the deployment step
+      PROVISIONING_PROFILE=
       RUN_APPLICATION_TESTS_WITH_IOS_SIM=YES ONLY_ACTIVE_ARCH=NO
       clean build test |
-      tee $CIRCLE_ARTIFACTS/xcode_raw.log |
+      tee $CIRCLE_ARTIFACTS/xcode_raw.log |   # saves original log
       xcpretty --color
       --report junit --output $CIRCLE_TEST_REPORTS/xcode/results.xml
       --report html --output $CIRCLE_TEST_REPORTS/xcode/results.html
-      && exit ${PIPESTATUS[0]}
+      && exit ${PIPESTATUS[0]}                # required by xcpretty
 deployment:
   beta_distribution:
     branch: master
     commands:
       - gym
-        --use_legacy_build_api 
+        --use_legacy_build_api
         --scheme vivira_health_ios
         --workspace vivira_health_ios.xcworkspace
-      - ipa distribute:testfairy
-        --key     "$TESTFAIRY_API_KEY"
-        --comment "CircleCI build $CIRCLE_BUILD_URL"
+      - pilot
+        upload
