--- a/circle.yml
+++ b/circle.yml
@@ -29,5 +29,4 @@ deployment:
         --use_legacy_build_api
         --scheme vivira_health_ios
         --workspace vivira_health_ios.xcworkspace
-      - pilot
-        upload
+      - pilot upload
