--- a/circle.yml
+++ b/circle.yml
@@ -11,16 +11,16 @@ test:
       -scheme vivira_health_ios
       -destination 'platform=iOS Simulator,name=iPhone 6,OS=9.2'
       -configuration Debug
-      CODE_SIGNING_REQUIRED=NO                # no need to do code signing at this point
-      CODE_SIGN_IDENTITY=                     # as it will be done in the deployment step
+      CODE_SIGNING_REQUIRED=NO
+      CODE_SIGN_IDENTITY=
       PROVISIONING_PROFILE=
       RUN_APPLICATION_TESTS_WITH_IOS_SIM=YES ONLY_ACTIVE_ARCH=NO
       clean build test |
-      tee $CIRCLE_ARTIFACTS/xcode_raw.log |   # saves original log
+      tee $CIRCLE_ARTIFACTS/xcode_raw.log |
       xcpretty --color
       --report junit --output $CIRCLE_TEST_REPORTS/xcode/results.xml
       --report html --output $CIRCLE_TEST_REPORTS/xcode/results.html
-      && exit ${PIPESTATUS[0]}                # required by xcpretty
+      && exit ${PIPESTATUS[0]}
 deployment:
   beta_distribution:
     branch: master
@@ -29,3 +29,4 @@ deployment:
         --use_legacy_build_api
         --scheme vivira_health_ios
         --workspace vivira_health_ios.xcworkspace
+      - pilot upload
